--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- Topper w/ logo -->
   <div class="row hidden-xs topper">
     <div class="col-xs-7 col-sm-7">
-      <a href="/"><img am-TopLogo alt="SECUREVIEW"  src="http://blog.convertify.io/assets/images/logo--hero.png" class="img-responsive"></a>
+      <a href="/"><img am-TopLogo alt="SECUREVIEW"  src="http://emotivator.com/assets/logo-home-358912456ca0f58a487c36b2e4938a23.png" class="img-responsive"></a>
     </div>
     <div class="col-xs-5 col-xs-offset-1 col-sm-5 col-sm-offset-0 text-right ">
       <p am-CallNow>1 (777) CALL - NOW</p>
