--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,6 +36,9 @@
                 <li class="<%= 'active' if current_page?(letters_path)%>">
                   <%= link_to('Letters', letters_path) %>
                 </li>
+                <li class="<%= 'active' if current_page?(chatrooms_path)%>">
+                  <%= link_to('Chatrooms', chatrooms_path) %>
+                </li>
               </ul>
               <ul class="nav navbar-nav navbar-right hidden-xs">
                 <li class="dropdown">
