--- a/app/assets/stylesheets/chatrooms.scss
+++ b/app/assets/stylesheets/chatrooms.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Chatrooms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#channelform {
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  padding: 20px;
+}
