--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,3 +1,5 @@
+
+<%= render 'chatrooms/my_groups' %>
 <p>
   <strong>Name:</strong>
   <%= @chatroom.name %>
@@ -12,6 +14,7 @@
     <% end %>
 
     <%= render message %>
+
   <% end %>
 </div>
 
