--- a/app/views/chatrooms/_form.html.erb
+++ b/app/views/chatrooms/_form.html.erb
@@ -19,7 +19,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Create", class: "btn btn-success" %>
+        <%= f.submit "Submit", class: "btn btn-success" %>
       </div>
     <% end %>
   </div>
