--- a/app/views/chatrooms/_my_groups.html.erb
+++ b/app/views/chatrooms/_my_groups.html.erb
@@ -1,13 +1,23 @@
-<h5>My chatrooms</h5>
-<ul>
-  <% current_user.chatrooms.public_channels.each do |chatroom| %>
-    <li><%= link_to chatroom.name, chatroom, data: {behavior: "chatroom-link", chatroom_id: chatroom.id} %></li>
-  <% end %>
-</ul>
+<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
 
-<h5>Users</h5>
-<ul>
-  <% (User.all - [current_user]).each do |user| %>
-    <li><%= link_to user.username, direct_message_path(user.id), data: {behavior: "chatroom-link", chatroom_id: Chatroom.direct_message_for_users([current_user, user]).id } %></li>
-  <% end %>
-</ul>
+<div class='container'>
+  <div id='content'>
+    <div class='span2 sidebar'>
+      <%= link_to "+ New Chatroom", new_chatroom_path, class: "btn btn-success" %><br/><br/>
+
+      <h5><%= current_user.chatrooms.public_channels.empty? ? '' : 'My chatrooms' %></h5>
+      <ul class="nav nav-tabs nav-stacked">
+        <% current_user.chatrooms.public_channels.each do |chatroom| %>
+          <li><%= link_to chatroom.name, chatroom, data: {behavior: "chatroom-link", chatroom_id: chatroom.id} %></li>
+        <% end %>
+      </ul>
+
+      <h5>Users</h5>
+      <ul class="nav nav-tabs nav-stacked">
+        <% (User.all - [current_user]).each do |user| %>
+          <li><%= link_to user.username, direct_message_path(user.id), data: {behavior: "chatroom-link", chatroom_id: Chatroom.direct_message_for_users([current_user, user]).id } %></li>
+        <% end %>
+      </ul>
+    </div>
+
+  </div>
