--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,29 +1,28 @@
-<p id="notice"><%= notice %></p>
-
 <%= render 'my_groups' %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @chatrooms.each do |chatroom| %>
+<div class="container">
+  <div class="col-md-8 col-md-offset-1 custyle">
+    <table class="table table-striped custab">
+    <thead>
       <tr>
-        <td><%= chatroom.name %></td>
-        <td><%= link_to 'Show', chatroom %></td>
-        <td><%= link_to 'Edit', edit_chatroom_path(chatroom) %></td>
-        <td><%= link_to 'Destroy', chatroom, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= link_to "Join", chatroom_chatroom_users_path(chatroom), method: :post %></td>
-        <td><%= link_to "Leave", chatroom_chatroom_users_path(chatroom), method: :delete %></td>
+          <th>Chatroom Name</th>
+          <th class="text-center">Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Chatroom', new_chatroom_path %>
+    </thead>
+      <% @chatrooms.each do |chatroom| %>
+        <tr>
+          <td><%= chatroom.name %></td>
+          <td class="text-center">
+            <%= link_to "Join", chatroom_chatroom_users_path(chatroom), method: :post %> |
+            <%= link_to "Leave", chatroom_chatroom_users_path(chatroom), method: :delete %> |
+            <% if is_user_creator?(current_user, chatroom) %>
+              <%= link_to 'Show', chatroom %> |
+              <%= link_to 'Edit', edit_chatroom_path(chatroom) %> |
+              <%= link_to 'Delete', chatroom, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
+</div>
