--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,23 +1,22 @@
 
 <%= render 'chatrooms/my_groups' %>
-<p>
-  <strong>Name:</strong>
-  <%= @chatroom.name %>
-</p>
+  <div class='span8 sidebar'>
+    <h4> Chatroom name: <%= @chatroom.name %></h4><br/>
+    <% unread_messages = false %>
+      <div data-behavior='messages' data-chatroom-id='<%= @chatroom.id %>'>
+        <% @messages.each do |message| %>
+          <% if !unread_messages && @chatroom_user.last_read_at < message.created_at %>
+            <% unread_messages = true %>
+            <div class="strike"><span>Unread Messages</span></div>
+          <% end %>
 
-<% unread_messages = false %>
-<div data-behavior='messages' data-chatroom-id='<%= @chatroom.id %>'>
-  <% @messages.each do |message| %>
-    <% if !unread_messages && @chatroom_user.last_read_at < message.created_at %>
-      <% unread_messages = true %>
-      <div class="strike"><span>Unread Messages</span></div>
+          <%= render message %>
+
+        <% end %>
+      </div>
+
+    <%= form_for [@chatroom, Message.new] do |f| %>
+      <%= f.text_area :body, rows: 1, class: "form-control", autofocus: true %>
     <% end %>
-
-    <%= render message %>
-
-  <% end %>
+  </div>
 </div>
-
-<%= form_for [@chatroom, Message.new] do |f| %>
-  <%= f.text_area :body, rows: 1, class: "form-control", autofocus: true %>
-<% end %>
