--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ @import "bootstrap-multiselect";
 
  @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900);
 [am-LatoSans] {
