--- a/app/views/chatrooms/_form.html.erb
+++ b/app/views/chatrooms/_form.html.erb
@@ -18,6 +18,12 @@
         <%= f.text_field :name, class:"form-group" %>
       </div>
 
+      <div>
+        <%= f.label :Select_users %><br/>
+        <%= select_tag("user_list", options_from_collection_for_select(all_users_except_current_user, "id", "username"), class: 'form-control col-md-7 col-xs-12', multiple: true) %>
+      </div>
+      <br/>
+
       <div class="actions">
         <%= f.submit "Submit", class: "btn btn-success" %>
       </div>
