--- a/app/views/chatrooms/_form.html.erb
+++ b/app/views/chatrooms/_form.html.erb
@@ -19,8 +19,8 @@
       </div>
 
       <div>
-        <%= f.label :Select_users %><br/>
-        <%= select_tag("user_list", options_from_collection_for_select(all_users_except_current_user, "id", "username"), class: 'form-control col-md-7 col-xs-12', multiple: true) %>
+        <%= f.label :Users_selection %><br/>
+        <%= select_tag("user_list", options_from_collection_for_select(all_users_except_current_user, "id", "username"), class: 'form-control col-md-7 col-xs-12 add-users-form', multiple: true) %>
       </div>
       <br/>
 
@@ -30,3 +30,9 @@
     <% end %>
   </div>
 </div>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('#user_list').multiselect();
+  });
+</script>
