--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,18 +14,18 @@ margin-top:30px;
 
 .login-wrap{
 	width:100%;
-	margin:auto;
-	max-width:525px;
-	min-height:500px;
+	margin: auto;
+	max-width:500px;
+	min-height:360px;
 	position:relative;
 	background:url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/170VMZp/elegant-waving-canvas-white-gray-background-loop_417hpne4x__F0000.png) no-repeat center;
 	background-size: cover;
-	// box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
 .login-html{
 	width:100%;
 	height:100%;
 	position:absolute;
-	padding:90px 70px 50px 70px;
+	padding:40px 70px 50px 70px;
 	// background:rgba(0,0,0,0.5);
 }
