--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,10 @@
  @import "bootstrap-multiselect";
 
  @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900);
+
+ .navbar {
+   margin-bottom: 0px;
+ }
 [am-LatoSans] {
   font-family: 'Lato', sans-serif;
 }
@@ -107,4 +111,20 @@
 }
 
 .alert > p {
-  text-align: center;}
+  text-align: center;
+}
+
+.quote-box{
+  overflow: hidden;
+  border-radius: 17px;
+  background-color: #4ADFCC;
+  margin: 0 auto;
+  color:white;
+  width: 30%;
+  box-shadow: 2px 2px 2px 2px #E0E0E0;
+  height: 90px;
+}
+
+small.quote-text {
+  color: white;
+}
