--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,6 +13,9 @@
             <div class="form-group">
               <%= f.email_field :email, autofocus: true, class: "form-control", id: "sign-up-form", placeholder: "Email Address" %>
             </div>
+            <div class="form-group">
+              <%= f.text_area :goal, autofocus: true, class: "form-control", id: "sign-up-form", rows: 2, placeholder: "Input your goal" %>
+            </div>
             <div class="form-group radio-group">
               <p><b>Are you signing up to support a family member or loved one?</b></p>
               <div  class="form-group">
@@ -21,9 +24,6 @@
                 &emsp;
                 <%= f.radio_button :supporter, true, :value => true %>
                 <%= f.label :supporter, "Yes", value: true %>
-              </div>
-              <div>
-
               </div>
             </div>
             <div class="form-group text-center">
