--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,13 @@
       <% end %>
     </div>
     <p></p>
+    <blockquote class="quote-box">
+      <small class="quote-text">
+        "<%= current_user.goal %>"
+      </small>
+      <hr>
+    </blockquote>
+    <p></p>
 
     <%= yield %>
   </body>
