--- a/app/views/letters/show.html.erb
+++ b/app/views/letters/show.html.erb
@@ -14,6 +14,7 @@
         <hr>
         <div class="text-center">
           <span class="">
+            <span class="badge quote-badge">896</span>  ❤
             <i>With love from <%= @letter.sender %></i>
           </span>
         </div>
