--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,10 +12,13 @@
  *
  *= require_tree .
  *= require_self
+ *= require simple_calendar
  */
+
  @import "bootstrap-sprockets";
  @import "bootstrap";
- @import "bootstrap-multiselect";
+ @import "select2";
+ @import "select2-bootstrap";
 
  @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900);
 
