--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -22,12 +23,14 @@
       <% end %>
     </div>
     <p></p>
-    <blockquote class="quote-box">
-      <small class="quote-text">
-        "<%= current_user.goal %>"
-      </small>
-      <hr>
-    </blockquote>
+    <% if current_user %>
+      <blockquote class="quote-box">
+        <small class="quote-text">
+          "<%= current_user.goal %>"
+        </small>
+        <hr>
+      </blockquote>
+    <% end %>
     <p></p>
 
     <%= yield %>
