--- a/app/views/chatrooms/_form.html.erb
+++ b/app/views/chatrooms/_form.html.erb
@@ -20,7 +20,7 @@
 
       <div>
         <%= f.label :Users_selection %><br/>
-        <%= f.collection_select(:user_ids, all_users_except_current_user, :id, :username, {}, {multiple: true, class: 'form-control col-md-7 col-xs-12', id: 'e1'}) %>
+        <%= f.collection_select(:user_ids, all_users_except_current_user, :id, :username, {}, {multiple: true, class: 'form-control col-md-7 col-xs-12', id: 'chatroom_users'}) %>
       </div>
       <br/>
 
@@ -33,7 +33,7 @@
 
 <script type="text/javascript">
   $(document).ready(function() {
-    $("#e1").select2({
+    $("#chatroom_users").select2({
     });
   });
 </script>
