--- a/app/views/journals/visible_journals.html.erb
+++ b/app/views/journals/visible_journals.html.erb
@@ -5,22 +5,21 @@
           <table class="table table-striped table-bordered table-list">
             <thead>
               <tr>
-                <th><em class="fa fa-cog"></em></th>
                 <th class="hidden-xs">ID</th>
                 <th>Subject</th>
-                <th>Creator</th>
+                <th>Sender</th>
               </tr>
             </thead>
             <tbody>
               <% @visible_journals.each do |journal| %>
                 <tr>
-                  <td class="hidden-xs">1</td>
+                  <td class="hidden-xs"></td>
                   <td><%= journal.subject %> </td>
-                  <td><%= journal.body %> </td>
+                  <td><%= journal.user.username %>  <%= link_to 'Read', journals_path(journal) %></td>
                 </tr>
               <% end %>
             </tbody>
-          </table>
+            </table>
       </div>
     </div>
   </div>
