--- a/app/views/letters/index.html.erb
+++ b/app/views/letters/index.html.erb
@@ -63,7 +63,7 @@
                 <th><em class="fa fa-cog"></em></th>
                 <th class="hidden-xs">ID</th>
                 <th>Sender</th>
-                <th>Suject</th>
+                <th>Subject</th>
               </tr>
             </thead>
             <tbody>
