--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,8 +119,8 @@
 
 .quote-box{
   overflow: hidden;
-  border-radius: 17px;
-  background-color: #4ADFCC;
+  border-radius: 15px;
+  background-color: #5bc0de;
   margin: 2% auto;
   color:white;
   box-shadow: 2px 2px 2px 2px #E0E0E0;
