--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,5 +25,10 @@
     <p></p>
 
     <%= yield %>
+    <!-- <footer class="footer">
+      <div class="container">
+        <a href="https://omnovi.tumblr.com/tagged/about" target="_blank"><span class="text-muted text-center">Learn More About Omnovi</span></a>
+      </div>
+    </footer> -->
   </body>
 </html>
