--- a/app/views/letters/index.html.erb
+++ b/app/views/letters/index.html.erb
@@ -19,6 +19,7 @@
               <tr>
                 <th>Subject</th>
                 <th>Recipient</th>
+                <th>Date sent</th>
               </tr>
             </thead>
             <tbody>
@@ -26,6 +27,12 @@
                 <tr>
                   <td><%= letter.subject %> </td>
                   <td><%= letter.recipient %> </td>
+                  <td>
+                    <%= letter.created_at.strftime("#{letter.created_at.day.ordinalize} of %b, %Y") %>
+                    <%= link_to(letter_path(letter.id), method: :destroy, data: {confirm: "Are you sure?"}, class: "btn btn-default btn-sm") do |link| %>
+                      <i class="glyphicon glyphicon-trash"></i>
+                    <% end %>
+                  </td>
                 </tr>
               <% end %>
             </tbody>
