--- a/app/assets/stylesheets/letters.scss
+++ b/app/assets/stylesheets/letters.scss
@@ -5,3 +5,8 @@
 .wrapper{width:60%; margin:5% auto;height:100%;  box-shadow:0 0 2px #aaa; font-family:Hind;padding: 10px;}
 .logo_header{width:100%; height:70px;background:#1CA8DD; padding:5px;}
 .email_body{width:100%; padding:0 15px;}
+
+.glyphicon-trash:before {
+    content: "\e020";
+    color: red;
+}
