--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -8,7 +8,8 @@
         <div class="panel-body">
           <%= form_for(:user, :url => registration_path(:user)) do |f| %>
             <div class="form-group">
-              <%= f.text_field :username, autofocus: true, class: "form-control", placeholder: "Username" %>
+              <%= f.text_field :username, autofocus: true, class: "form-control", placeholder: "Username" %><br/>
+              <%= f.text_field :phone_number, class: "form-control", placeholder: "Mobile Number" %>
             </div>
             <div class="form-group">
               <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "Email Address" %>
