--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,14 +2,15 @@
   <div class="login-wrap">
   	<div class="login-html">
       <% if current_user.has_a_mood_record_for_today? %>
-        <h4 class="text-center">Your submitted mood for today is <br/>"<%= current_user_last_mood %>"</h4>
+        <h4 class="text-center">Your submitted mood for today is <br/>"<%= current_user_last_mood %>"</h4><hr>
         <% if @low_status %>
-          <p> Please call or reach out to your loved ones</p>
-          <% current_user.supporters.each do |supporter| %>
-            <li class="">
-              <%= link_to supporter.username, direct_message_path(supporter.id), data: {behavior: "chatroom-link", chatroom_id: Chatroom.direct_message_for_users([current_user, supporter]).id } %>
-            </li>
-          <% end %>
+          <ul class="list-unstyled multilevels text-center">
+            <h5><%= "Please reach out to your loved ones" if current_user.supporters %></h5>
+            <% current_user.supporters.each do |supporter| %>
+              <li style="font-size:1.5em;">
+                <%= link_to supporter.username, direct_message_path(supporter.id), data: {behavior: "chatroom-link", chatroom_id: Chatroom.direct_message_for_users([current_user, supporter]).id } %>
+              </li>
+            <% end %>
         <% end %>
       <% else %>
         <div class="form-group col-md-12 text-center">
