--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,27 +56,18 @@
 }
 
 .navbar.navbar-inverse {
-  background-image: linear-gradient(#9f9f9f, #535353 3%, #1f1f1f 17%, #212121 49%, #191919 89%, #000000 100%);
-  border-top: 1px inset rgba(255, 255, 255, 0.1);
+  background-image: -webkit-linear-gradient(top, #fdcd3e 60%, #fd9838 100%);
+  border: 1px inset rgba(255, 255, 255, 0.1);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   margin-top: 10px;
 }
 
 .navbar .navbar-nav > li > a {
-  color: #d1d1d1;
+  color: #007dcc !important;
   font-weight: 700;
   text-rendering: optimizeLegibility;
-  text-shadow: 0px -1px black, 0px 1px rgba(255, 255, 255, 0.25);
   line-height: 18px;
-}
-
-.navbar .navbar-nav > li.active {
-  color: #f8f8f8;
-  background-color: #080808;
-  box-shadow: inset 0px -28px 23px -21px rgba(255, 255, 255, 0.15);
-  border-left: 1px solid #2A2A2A;
-  border-right: 1px solid #272727;
 }
 
 .btn.btn-gradient-blue {
@@ -86,7 +77,7 @@
   background-image: linear-gradient(to bottom, #127bde 0%, #072d50 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff127bde', endColorstr='#ff072d50', GradientType=0);
-  border-color: #072d50 #072d50 #0c5497;
+  // border-color: #072d50 #072d50 #0c5497;
   color: #fff !important;
   text-shadow: 0 -1px 0 rgba(31, 31, 31, 0.29);
   -webkit-font-smoothing: antialiased;
@@ -120,10 +111,9 @@
 .quote-box{
   overflow: hidden;
   border-radius: 15px;
-  background-color: #5bc0de;
+  background-color: #007dcc;
   margin: 2% auto;
-  color:white;
-  box-shadow: 2px 2px 2px 2px #E0E0E0;
+  padding: 15px 15px 15px 15px;
   height: 50%;
   width: 50%;
   float: right;
@@ -136,6 +126,14 @@ small.quote-text {
 .shared-journals {
   float: right;
   margin-right: 180px;
+  background-color: #007dcc;
+  border-color: #007dcc;
+}
+
+a.new-chatroom {
+  background-color: #007dcc;
+  border-color: #007dcc;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#007dcc), to(#007dcc));
 }
 
 .footer {
@@ -145,4 +143,40 @@ small.quote-text {
   height: 60px;
   line-height: 60px;
   background-color: #f5f5f5;
+}
+
+.navbar .nav>li>a {
+  padding: 15px 15px 10px !important;
+}
+
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+  background-color: #007dcc;
+  color: #fff !important;
+}
+
+.panel-footer {
+    padding: 10px 15px;
+    background-color: #fdcd3e;
+    border-top: 1px solid #fdcd3e;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+
+.panel-default > .panel-heading {
+    background-color: #fdcd3e;
+    border-color: #fdcd3e;
+}
+
+.btn-success {
+    color: #fff;
+    background-color: #007dcc;
+    border-color: #007dcc;
+}
+
+.navbar-inverse .brand, .navbar-inverse .nav>li>a {
+  text-shadow: 0 0 rgba(0, 0, 0, 0.25) !important;
+}
+
+.navbar-inverse .nav li.dropdown.open>.dropdown-toggle, .navbar-inverse .nav li.dropdown.active>.dropdown-toggle, .navbar-inverse .nav li.dropdown.open.active>.dropdown-toggle {
+  background-color: #007dcc !important;
 }
