--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,1 +1,31 @@
-hello world
+<div class="about-section paddingTB60 gray-bg">
+                <div class="container">
+                    <div class="row">
+						<div class="col-md-10 col-sm-10">
+							<div class="about-title clearfix">
+								<h1>WHAT IS  <span>OMNOVI?</span></h1>
+
+								<p>
+                  Omnovi is a unique and powerful app. Its purpose is to motivate the user to achieve their desired goals…no matter what the challenges are. Based in solid psychological principles, Omnovi harnesses the power of human emotions and the power of human relationships to make good things happen. Omnovi fuels the user’s motivation to achieve positives and eliminate negatives.
+                </p>
+                <p>
+                  Omnovi was developed over many years by a physician certified in psychiatry, neurology and addictions and with extensive experience in athletics and human motivation.
+
+                  It is designed to utilize the users input about
+                  <p>1) their goals </p>
+                  <p>2) their emotions and </p>
+                  <p>3) their trusted social network. Omnovi then gatherers and organizes the powerful influences from
+                    the user’s Support Network. The Support Network’s messaging is delivered back to the user in text notes, pictures, audio and video format.
+                    These powerful stimuli motivate the user to pursue their goals. Omnovi makes it easy for the Support Person
+                    to render their assistance. The user’s Support Network may be as extensive as the user wishes.</p>
+                </p>
+
+The Motivational Messages are stored and are constantly and immediately available to the user. Messages can be selectively chosen by the user. The app also will repeatedly assist the user by sending messages through the day or when indicated by the user’s status reports.
+                </p>
+
+							</div>
+						</div>
+
+                    </div>
+                </div>
+            </div>
