--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,23 +25,15 @@
     <p></p>
 
     <%= yield %>
-    <section id="footer">
-      <!-- <div class="bottom_border"> -->
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
-            <ul class="list-unstyled list-inline social text-center">
-              <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a></li>
-            </ul>
-          </div>
-        </div>
+    <footer class="footer">
+      <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
             <p><u><a href="/about">Learn more about us at emotivator</a></u></p>
             <p class="h6">&copy All right Reversed</p>
           </div>
         </div>
-      <!-- </div> -->
-    </section>
+      </div>
+    </footer>
   </body>
 </html>
