--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -191,3 +191,17 @@ section .section-title {
 
 /*footer*/
 footer { width:100%; background-color:#fdcd3e; min-height:250px; padding:40px 0px 30px 0px;     margin-top: 30px;}
+
+.pretty th .current {
+  padding-right: 12px;
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+.pretty th .asc {
+  background-image: url(/assets/up_arrow.gif);
+}
+
+.pretty th .desc {
+  background-image: url(/assets/down_arrow.gif);
+}
