--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -45,7 +45,7 @@
               <li class="<%= 'active-path' if current_page?(chatrooms_path)%>">
                 <%= link_to('Chatrooms', chatrooms_path) %>
               </li>
-              <li class="<%= 'active-path' if current_page?(chatrooms_path)%>">
+              <li class="<%= 'active-path' if current_page?(statuses_path)%>">
                 <%= link_to('Status', statuses_path) %>
               </li>
               <% if current_user.admin? %>
