--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -1,19 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
-      <%= form_for(status) do |f| %>
-        <% if status.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(status.errors.count, "error") %> prohibited this status from being saved:</h2>
-
-            <ul>
-            <% status.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-            </ul>
-          </div>
-        <% end %>
-
+      <%= form_for(status,  validate: true) do |f| %>
         <div class="form-group">
           <%= f.label :body %>
           <%= f.text_area :body, autofocus: true, class: "form-control" %>
@@ -21,6 +9,7 @@
 
         <div class="form-group">
           <%= f.label :image %>
+          <%= f.hidden_field :image_cache %>
           <%= f.file_field :image, autofocus: true, class: "form-control" %>
         </div>
 
