Status feature added

--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -5,7 +5,7 @@
 <table class="pretty">
   <thead>
     <tr>
-      <th><%= sortable "body" %></th>
+      <th>Body</th>
       <th><%= sortable "image" %></th>
       <th><%= sortable "video" %></th>
       <th><%= sortable "user" %></th>
