--- a/app/views/statuses/edit.html.erb
+++ b/app/views/statuses/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Status</h1>
-
 <%= render 'form', status: @status %>
 
 <%= link_to 'Show', @status %> |
-<%= link_to 'Back', statuses_path %>
+<!-- <%= link_to 'Back', statuses_path %> -->
