--- a/app/views/statuses/new.html.erb
+++ b/app/views/statuses/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Status</h1>
 
 <%= render 'form', status: @status %>
 
-<%= link_to 'Back', statuses_path %>
+<!-- <%= link_to 'Back', statuses_path %> -->
