--- a/app/assets/stylesheets/statuses.scss
+++ b/app/assets/stylesheets/statuses.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Statuses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+td > video {
+  width: 180px;
+  height: 100px;
+}
+
+td > img {
+  width: 100px;
+  height: 100px;
+}
+.image {
+  height: 200px;
+  widows: 100%;
+  display: block;
+ }
+
+.video {
+  display: block;
+}
