--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,33 +1,47 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Statuses</h1>
-
-<table class="pretty">
-  <thead>
-    <tr>
-      <th>Body</th>
-      <th><%= sortable "image" %></th>
-      <th><%= sortable "video" %></th>
-      <th><%= sortable "user" %></th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @statuses.each do |status| %>
-      <tr>
-        <td><%= status.body %></td>
-        <td><%= image_tag status.image_url if status.image_url %></td>
-        <td><%= video_tag status.video_url if status.video_url :size => "320x240", :controls => true %></td>
-        <td><%= status.user.username %></td>
-        <td><%= link_to 'Show', status %></td>
-        <td><%= link_to 'Edit', edit_status_path(status) %></td>
-        <td><%= link_to 'Destroy', status, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Status', new_status_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <div class="panel panel-default panel-table">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col col-xs-6">
+              <h3 class="panel-title">Statuses</h3>
+            </div>
+            <div class="col col-xs-6 text-right">
+              <p><%= link_to 'New Status', new_status_path, class: "btn btn-sm btn-success btn-create" %></p>
+            </div>
+          </div>
+        </div>
+      <div class="panel-body">
+        <table class="table table-striped table-bordered table-list pretty">
+          <thead>
+            <tr>
+              <th><%= sortable "body" %></th>
+              <th><%= sortable "image" %></th>
+              <th><%= sortable "video" %></th>
+              <th><%= sortable "user" %></th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @statuses.each do |status| %>
+              <tr>
+                <td><%= status.body %></td>
+                <td><%= image_tag status.image_url if status.image_url %></td>
+                <td><%= video_tag status.video_url if status.video_url :size => "320x240", :controls => true %></td>
+                <td><%= status.user.username %></td>
+                <td><%= link_to(status, class: "btn btn-default btn-sm") do %><i class="glyphicon glyphicon-folder-open"></i><% end %></td>
+                <td><%= link_to(edit_status_path(status), class: "btn btn-default btn-sm") do %><i class="glyphicon glyphicon-pencil"></i><% end %></td>
+                <td>
+                  <%= link_to(status, method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-default btn-sm") do %>
+                    <i class="glyphicon glyphicon-trash"></i>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
