update mobile responsive

--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -13,7 +13,7 @@
           </div>
         </div>
       <div class="panel-body">
-        <table class="table table-striped table-bordered table-list pretty">
+        <table class="table table-striped table-bordered table-list pretty table-responsive">
           <thead>
             <tr>
               <th><%= sortable "body" %></th>
